--- a/public/index.html
+++ b/public/index.html
@@ -20,11 +20,11 @@
     
     window.DD_RUM.onReady(function() {
       window.DD_RUM.init({
-        clientToken: 'pubb5a3a47cad57e6f91c765bc6a5baa14a',
-        applicationId: '356bb7d0-036e-4926-8b16-d9c9dfd0056e',
+        clientToken: 'pub428064d83b81f85d8b56fa890281f587',
+        applicationId: '16dc0a71-8baa-4c72-bf5e-bcc27c2effcc',
         site: 'datadoghq.com',
-        service: 'python-fargate-ecs',
-        env: 'fargate-ecs',
+        service: 'python-security',
+        env: 'cloudrun-python',
         // Specify a version number to identify the deployed version of your application in Datadog
         version: '1.0.0',
         // allowedTracingUrls: ["http://13.200.4.129:3000/"], 
